Vis: Fixed Descriptions not showing in vis

--- a/server/www/css/app.css
+++ b/server/www/css/app.css
@@ -109,3 +109,7 @@
   padding: 0;
   margin: 0;
 }
+
+.material-icons a {
+  text-decoration: none;
+}
